--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "pdfkit": "^0.15.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-dropzone": "^14.2.9"
+    "react-dropzone": "^14.2.9",
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
